@@ -6,3 +6,5 @@ SIGNIN_URL        = 'https://api.twitter.com/oauth/authenticate'
 
 PLONE_CONSUMER_KEY = 'wMO074kozI1wJHBe8gIaw'
 PLONE_CONSUMER_SECRET = 'sBWVkt68fgouR5W4wdID3iAKHsfjstBiEbbc5ZCx0w'
+
+PROJECTNAME = "collective.twitter.accounts"
