@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" purge="True">
+    <configlet action_id="TwitterSettings"
+                title="Twitter"
+                purge="True" />
+</object>
