@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<registry>
+ <record name="collective.twitter.accounts" delete="true" />
+</registry>
